# VX6

./: .gitignore  Makefile  README.md  README_PROXY.md  SECURITY.md  go.mod  go.sum  test_onion.go
.github/workflows/: stable-gate.yml
Threat_Model/: threat_model.md
apps/chat/: README.md  app.go  chat_test.go  main.go  (+2 more)
browser/qt/: .gitignore  CMakeLists.txt  PLAN.md  README.md
browser/qt/src/: browserwindow.cpp  browserwindow.h  main.cpp  vx6backend.cpp  vx6backend.h  vx6schemehandler.cpp  vx6schemehandler.h
changes_for_windows/: 01_test_baseline_windows.md  02_windows_compatibility_changes_and_manifest_alignment.md  03_test_results_after_windows_changes.md  04_windows_version_compatibility_research.md  05_windows_implementation_summary.md  06_validation_report.md  07_build_config_windows.md  08_windows_quick_start.md  09_implementation_index.md  10_windows_support_complete_implementation.md  11_full_ebpf_implementation_complete.md  12_temp_tor_automatic_test.md  README.md
docs/: COMMANDS.md  FILE_MAP.md  GUI.md  LINUX.md  PROTOCOL_SDK_NEXT_STEPS.md  SETUP.md  STABLE_RELEASE_POLICY.md  STATUS.md  TODO_ISSUES.md  USAGE.md  WINDOWS.md  architecture.md  chat.md  current-limitations-and-fix-plan.md  dht-architecture-and-scaling.md  dht-benchmark-report.md  dht-hardening-roadmap.md  dht.md  discovery.md  ebpf.md  encrypted-onion-benchmark-report.md  encrypted-onion-routing.md  identity.md  platform-hidden-roadmap.md  roadmap.md  services.md  systemd.md  vision.md  vx6-architecture-whitepaper.md
sdk/: interfaces.go  sdk.go  share.go
wiki/: Decentralized-DHT.md
(+133 files in other folders)
